# advent_of_code_2024

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
day_01/: compute.py  test_compute.py
day_02/: compute.py  test_compute.py
day_03/: compute.py  test_compute.py
day_04/: compute.py  test_compute.py
day_05/: compute.py  test_compute.py
day_06/: compute.py  test_compute.py
day_07/: compute.py  test_compute.py
day_08/: compute.py  test_compute.py
day_09/: compute.py  test_compute.py
