[tool.poetry]
name = "advent_of_code_2024"
version = "0.1.0"
description = ""
authors = ["Thomas Richard <thomrich0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "^4.0.1"
pytest-random-order = "*"

[tool.pytest.ini_options]
addopts = ['--random-order']
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.ruff]
line-length = 120
fix = true
preview = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
